updated product-grid style

--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -138,9 +138,9 @@ body
     .products
       +flexbox(row)
       align-items: flex-start
+      justify-content: space-between
 
       .product-grid
-        flex-basis: 60%
         +flexbox(row)
         justify-content: flex-start
         flex-wrap: wrap
