--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -150,9 +150,9 @@ body {
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      align-items: flex-start; }
+      align-items: flex-start;
+      justify-content: space-between; }
       body main .products .product-grid {
-        flex-basis: 60%;
         display: flex;
         flex-direction: row;
         justify-content: center;
