--- a/online_store/templates/home.html
+++ b/online_store/templates/home.html
@@ -13,20 +13,22 @@
 <h1>Search Results for: {{ search_message }}</h1>
 {% endif %}
 
-<div class="product-grid">
-  {% for product in products %}
-  <div class="product-item">
-    <p>
-      <a href="/products/{{ product.id }}">
-        <img src="{{ url_for('static', filename='product-images/' + product.image) }}" alt="{{ product.name }}">
-      </a>
-    </p>
-    <p class="name">
-      <a href="/products/{{ product.id }}">{{ product.name }}</a>
-    </p>
-    <p class="price">${{ product.price }}</p>
-    <button type="button" name="add-to-cart">Add To Cart</button>
+<div class="products">
+  <div class="product-grid">
+    {% for product in products %}
+    <div class="product-item">
+      <p>
+        <a href="/products/{{ product.id }}">
+          <img src="{{ url_for('static', filename='product-images/' + product.image) }}" alt="{{ product.name }}">
+        </a>
+      </p>
+      <p class="name">
+        <a href="/products/{{ product.id }}">{{ product.name }}</a>
+      </p>
+      <p class="price">${{ product.price }}</p>
+      <button type="button" name="add-to-cart">Add To Cart</button>
+    </div>
+    {% endfor %}
   </div>
-  {% endfor %}
+  {% endblock %}
 </div>
-{% endblock %}
