--- a/online_store/templates/register.html
+++ b/online_store/templates/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="full-form" class="signup">
-  <form method="POST">
+<div class="signup">
+  <form class="full-form" method="POST">
     {{ form.hidden_tag() }}
     <fieldset>
       <legend>{{ title }}</legend>
@@ -55,7 +55,7 @@
       {{ form.submit }}
     </div>
   </form>
-  <div>
+  <div class="change-form">
     <small>
       Already have an account? <a href="{{ url_for('users.login') }}">Login</a>
     </small>
