chnaged .admin to .employee

--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -289,14 +289,14 @@ body {
       align-items: center;
       align-items: flex-start;
       justify-content: space-around; }
-      body main .roles .admins, body main .roles .users {
+      body main .roles .users, body main .roles .employees {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100%;
         padding: 1rem; }
-        body main .roles .admins .admin, body main .roles .admins .user, body main .roles .users .admin, body main .roles .users .user {
+        body main .roles .users .user, body main .roles .users .employee, body main .roles .employees .user, body main .roles .employees .employee {
           display: flex;
           flex-direction: row;
           justify-content: center;
@@ -306,18 +306,18 @@ body {
           width: 100%;
           padding: 1rem;
           margin: 1rem; }
-          body main .roles .admins .admin p, body main .roles .admins .user p, body main .roles .users .admin p, body main .roles .users .user p {
+          body main .roles .users .user p, body main .roles .users .employee p, body main .roles .employees .user p, body main .roles .employees .employee p {
             flex-basis: 55;
             font-size: 1.2rem;
             text-align: left; }
-          body main .roles .admins .admin button, body main .roles .admins .user button, body main .roles .users .admin button, body main .roles .users .user button {
+          body main .roles .users .user button, body main .roles .users .employee button, body main .roles .employees .user button, body main .roles .employees .employee button {
             flex-basis: 45%; }
-            body main .roles .admins .admin button:hover, body main .roles .admins .admin button:focus, body main .roles .admins .user button:hover, body main .roles .admins .user button:focus, body main .roles .users .admin button:hover, body main .roles .users .admin button:focus, body main .roles .users .user button:hover, body main .roles .users .user button:focus {
+            body main .roles .users .user button:hover, body main .roles .users .user button:focus, body main .roles .users .employee button:hover, body main .roles .users .employee button:focus, body main .roles .employees .user button:hover, body main .roles .employees .user button:focus, body main .roles .employees .employee button:hover, body main .roles .employees .employee button:focus {
               background: #B09C7D; }
-            body main .roles .admins .admin button:focus, body main .roles .admins .user button:focus, body main .roles .users .admin button:focus, body main .roles .users .user button:focus {
+            body main .roles .users .user button:focus, body main .roles .users .employee button:focus, body main .roles .employees .user button:focus, body main .roles .employees .employee button:focus {
               outline: 1px solid #B09C7D;
               outline-offset: -4px; }
-            body main .roles .admins .admin button:active, body main .roles .admins .user button:active, body main .roles .users .admin button:active, body main .roles .users .user button:active {
+            body main .roles .users .user button:active, body main .roles .users .employee button:active, body main .roles .employees .user button:active, body main .roles .employees .employee button:active {
               transform: scale(0.95); }
     body main .full-form {
       display: flex;
