--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -289,12 +289,12 @@ body
       align-items: flex-start
       justify-content: space-around
 
-      .admins, .users
+      .users, .employees
         +flexbox(column)
         width: 100%
         padding: 1rem
 
-        .admin, .user
+        .user, .employee
           +flexbox(row)
           justify-content: space-between
           background-color: $light-color
