--- a/online_store/templates/admin/base.html
+++ b/online_store/templates/admin/base.html
@@ -9,13 +9,13 @@ Employee
 {% endblock %}
 
 {% block nav %}
-<h1>
+{# }<h1>
   {% if current_user.is_admin %}
   Admin
   {% else %}
   Employee
   {% endif %}
-</h1>
+</h1> #}
 <nav>
   <ul>
     {% if current_user.is_employee %}
@@ -23,7 +23,7 @@ Employee
     <li><a href="{{ url_for('admin.show_categories') }}">Categories</a></li>
     {% endif %}
     {% if current_user.is_admin %}
-    <li><a href="{{ url_for('admin.show_admins') }}">Admins</a></li>
+    <li><a href="{{ url_for('admin.show_employees') }}">Employees</a></li>
     {% endif %}
   </ul>
 </nav>
