updated file path to js

--- a/online_store/templates/admin/products.html
+++ b/online_store/templates/admin/products.html
@@ -4,7 +4,7 @@
 {{ super() }}
 
 <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-<script type="text/javascript" src="{{ url_for('static', filename='products.js') }}" defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/products.js') }}" defer></script>
 
 {% endblock %}
 {% block content %}
