--- a/online_store/templates/admin/categories.html
+++ b/online_store/templates/admin/categories.html
@@ -4,7 +4,7 @@
 {{ super() }}
 
 <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-<script type="text/javascript" src="{{ url_for('static', filename='categories.js') }}" defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/categories.js') }}" defer></script>
 
 {% endblock %}
 
