--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -365,15 +365,13 @@ body
         input
           font-size: 1.5rem
           text-align: left
+          width: 100%
 
-          &[type=text], &[type=email], &[type=password], &[type=number]
+          &[type=text], &[type=email], &[type=password], &[type=number], &[type=file]
             background-color: transparent
             border: none
             border-bottom: 3px solid $dark-color
             outline: $dark-color
-
-          &[type=file]
-            width: 100%
 
         .remember
           +flexbox(row)
