updated product-grid styles

--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -143,9 +143,8 @@ body
 
       .product-grid
         +flexbox(row)
-        // justify-content: flex-start
         flex-wrap: wrap
-        margin: auto
+        margin: 0 auto
         height: 100%
         width: 100%
 
