--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -159,7 +159,7 @@ body {
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin: auto;
+        margin: 0 auto;
         height: 100%;
         width: 100%; }
         body main .products .product-grid .product-item {
