--- a/online_store/templates/admin/product_details.html
+++ b/online_store/templates/admin/product_details.html
@@ -36,14 +36,25 @@
         {% endif %}
         {{ form.price.label }}
         {% if form.price.errors %}
-          {{ form.price(class="is-invalid") }}
+          {{ form.price(class="is-invalid", step=0.01) }}
           <div class="invalid-feedback">
             {% for error in form.price.errors %}
               {{ error }}
             {% endfor %}
           </div>
         {% else %}
-          {{ form.price }}
+          {{ form.price(step=0.01) }}
+        {% endif %}
+        {{ form.quantity.label }}
+        {% if form.quantity.errors %}
+          {{ form.quantity(class="is-invalid", min="1", max="999") }}
+          <div class="invalid-feedback">
+            {% for error in form.quantity.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.quantity(min="1", max="999") }}
         {% endif %}
         {{ form.image.label }}
         {{ form.image }}
