--- a/online_store/templates/cart.html
+++ b/online_store/templates/cart.html
@@ -6,7 +6,7 @@
 {% for product in cart.products %}
   <div class="product">
     {{ product.name }}
-  </div>>
+  </div>
 {% endfor %}
 <p>{{ cart.quantity }}</p>
 {% endblock %}
