--- a/online_store/static/sass/main.sass
+++ b/online_store/static/sass/main.sass
@@ -59,11 +59,13 @@ body
         padding: 0
         margin: 0
 
-        .circle
+        .cart-total
           display: block
           position: absolute
           color: $light-color
-          background-color: $dark-color
+          background-color: $red
+          font-size: 0.8rem
+          padding-top: 0.15rem
           border-radius: 50%
           height: 24px
           width: 24px
@@ -132,7 +134,7 @@ body
       width: 100%
 
     .invalid-feedback
-      color: red
+      color: $red
       font-size: 0.8rem
 
     .products
