--- a/online_store/templates/base.html
+++ b/online_store/templates/base.html
@@ -36,7 +36,11 @@
         </a>
         <a href="{{ url_for('main.show_cart') }}">
           <img class="cart" src="{{ url_for('static', filename='assets/shopping-cart.svg') }}" alt="Shopping Cart">
-          <div class="cart-total">{{ cart.quantity }}</div>
+          {% if cart %}
+            <div class="cart-total">{{ cart.quantity }}</div>
+          {% else %}
+            <div class="cart-total">0</div>
+          {% endif %}
         </a>
       </div>
     </div>
