--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -147,6 +147,9 @@ body {
     body main .invalid-feedback {
       color: #CC0000;
       font-size: 0.8rem; }
+    body main .is_invalid {
+      color: #CC0000;
+      font-size: 0.8rem; }
     body main .products {
       display: flex;
       flex-direction: row;
@@ -230,7 +233,7 @@ body {
         padding: 10px;
         background-color: #FCDFB3;
         width: 35%; }
-        body main .product-detail .product-detail-text form input {
+        body main .product-detail .product-detail-text .product-detail-form input {
           background-color: transparent;
           border: none;
           border-bottom: 3px solid #634C29;
@@ -462,6 +465,64 @@ body {
         color: #FCDFB3;
         cursor: pointer;
         text-decoration: underline; }
+    body main .cart-products {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      body main .cart-products .cart-legend {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #FCDFB3;
+        color: #634C29;
+        margin: 1rem;
+        padding: 0 0.5rem;
+        font-size: 1rem;
+        width: 100%; }
+      body main .cart-products .cart-product {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #FCDFB3;
+        color: #634C29;
+        margin: 1rem;
+        padding: 1rem;
+        font-size: 1.5rem;
+        width: 100%; }
+        body main .cart-products .cart-product img {
+          height: 4rem; }
+        body main .cart-products .cart-product button {
+          width: auto; }
+      body main .cart-products .totals {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #FCDFB3;
+        color: #634C29;
+        margin: 1rem;
+        padding: 0 0.5rem;
+        font-size: 1.5rem;
+        width: 100%; }
+        body main .cart-products .totals p {
+          margin: 1rem; }
+    body main .cart-actions {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center; }
+      body main .cart-actions .clear-cart {
+        flex-basis: 20%;
+        margin-right: 0.5rem; }
+      body main .cart-actions .checkout {
+        flex-basis: 80%;
+        margin-left: 0.5rem; }
     body main .account {
       display: flex;
       flex-direction: row;
